# docs/v1/swagger.yaml
@@ -1050,7 +1050,7 @@ definitions:
       timestamp:
         type: string
     type: object
-  userdto.UserResponse:
+  user.User:
     properties:
       avatar_url:
         type: string
@@ -2162,7 +2162,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/userdto.UserResponse'
+              $ref: '#/definitions/user.User'
             type: array
         "400":
           description: Bad Request
