# internal/user/dto/response.go
@@ -1,10 +1,0 @@
-package userdto
-
-import "github.com/google/uuid"
-
-type UserResponse struct {
-	ID        uuid.UUID `json:"id"`
-	Username  string    `json:"username"`
-	Email     string    `json:"email"`
-	AvatarURL string    `json:"avatar_url"`
-}
