# internal/user/handler.go
@@ -1,22 +1,20 @@
-package handler
+package user
 
 import (
 	"strings"
 	"unicode/utf8"
 
 	"github.com/gofiber/fiber/v2"
-	"github.com/qobulov/brothers-app/internal/user/dto"
-	"github.com/qobulov/brothers-app/internal/user/usecase"
 	"github.com/qobulov/brothers-app/pkg/apperror"
 	"github.com/qobulov/brothers-app/pkg/responses"
 )
 
-type HttpUserHandler struct {
-	userUseCase usecase.UserUseCase
+type Handler struct {
+	service *Service
 }
 
-func NewHttpUserHandler(useCase usecase.UserUseCase) *HttpUserHandler {
-	return &HttpUserHandler{userUseCase: useCase}
+func NewHandler(service *Service) *Handler {
+	return &Handler{service: service}
 }
 
 // Lookup godoc
@@ -25,19 +23,19 @@ func NewHttpUserHandler(useCase usecase.UserUseCase) *HttpUserHandler {
 // @Tags users
 // @Produce json
 // @Param query query string true "Username or email fragment" minlength(2) maxlength(100)
-// @Success 200 {array} userdto.UserResponse
+// @Success 200 {array} User
 // @Failure 400 {object} responses.ErrorResponse
 // @Failure 401 {object} responses.ErrorResponse
 // @Security BearerAuth
 // @Router /users [get]
-func (h *HttpUserHandler) Lookup(c *fiber.Ctx) error {
+func (h *Handler) Lookup(c *fiber.Ctx) error {
 	query := strings.TrimSpace(c.Query("query"))
 	if utf8.RuneCountInString(query) < 2 || utf8.RuneCountInString(query) > 100 {
 		return responses.Error(c, apperror.ErrInvalidData)
 	}
-	users, err := h.userUseCase.SearchUsers(c.UserContext(), query)
+	users, err := h.service.Search(c.UserContext(), query)
 	if err != nil {
 		return responses.Error(c, err)
 	}
-	return responses.Success(c, fiber.StatusOK, userdto.ToUserResponseList(users), responses.MessageUsersReturned)
+	return responses.Success(c, fiber.StatusOK, users, responses.MessageUsersReturned)
 }
